@@ -142,6 +142,12 @@ Array::
 
     * Added Array#intersection. [Feature #16155]
 
+Comparable::
+
+  Modified method::
+
+    * Comparable#clamp now accepts a Range argument. [Feature #14784]
+
 Complex::
 
   New method::
